#pragma once

enum class GameStyle 
{
    Classic,
    Alco
};