@startuml game

!define DARKBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

class Player <<(S, #FFFF00) Struct >>
{
    unsigned int id;
    unsigned int points;
}

class GameStyle <<(E, #00FF00) Enum >>
{
    Classic
    Alco
}

class Game
{
    Game(GameStyle style);
    void addPlayer(unsigned int name);
    void playingPlayerScoredPoints(unsigned int points);
    void processGame();
    json outputGameState();
    bool isEnd();
    void nextPlayer();

    std::queue mPlayers;
    ModeGame* mModeGame;
    unsigned int playingPlayerDarts;
}

Player --* "inf" Game
GameStyle ..> Game

class ModeGame << (B, #FF0000) Base >>
{
    void processPlayerScore(Player player);
    bool isPlayerWin(Player player);
}

Player ..> ModeGame
ModeGame --* "1" Game

@enduml